# uefi_playground

./: .gitignore  COPYRIGHT.shim  Makefile  README.md  shim.c
embed/: Cargo.toml
embed/src/: lib.rs
