[package]
name = "embed"
version = "0.1.0"
authors = ["diekmann <none@localhost>"]
edition = "2018"

[dependencies]
rlibc = "1"
# log = { version = "0.4", default-features = false }

[lib]
name = "embed"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
